--- a/app/globals.css
+++ b/app/globals.css
@@ -17,12 +17,18 @@ main {
     background-color: #F0EAD6;
     height: 100vh;
     width: 100vw;
+    margin: 0;
 }
 
 html {
     background-color: #F0EAD6;
     border: none;
     padding: 0px;
+    margin: 0;
+}
+
+body {
+    margin: 0;
 }
 
 button {
