red html color test

--- a/app/globals.css
+++ b/app/globals.css
@@ -21,7 +21,7 @@ main {
 }
 
 html {
-    background-color: #F0EAD6;
+    background-color: #FF0000;
     border: none;
     padding: 0px;
     margin: 0;
