--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,3 @@
-
 h1 {
     font-size: 600%;
 }
@@ -21,7 +20,7 @@ main {
 }
 
 html {
-    background-color: #FF0000;
+    background-color: #F0EAD6;
     border: none;
     padding: 0px;
     margin: 0;
