--- a/app/globals.css
+++ b/app/globals.css
@@ -1,14 +1,17 @@
 h1 {
     font-size: 600%;
+    margin: 0;
 }
 
 h2 {
     font-size: 250%;
     padding: 20px;
+    margin: 0;
 }
 
 h3 {
     font-size: 150%;
+    margin: 0;
 }
 
 main {
@@ -16,6 +19,10 @@ main {
     background-color: #F0EAD6;
     height: 100vh;
     width: 100vw;
+    margin: 0;
+}
+
+body {
     margin: 0;
 }
 
