--- a/app/globals.css
+++ b/app/globals.css
@@ -24,10 +24,7 @@ main {
     height: 100vh;
     width: 100vw;
     margin: 0;
-}
-
-body {
-    margin: 0;
+    font-family: 'Courier New', monospace;
 }
 
 html {
@@ -39,6 +36,7 @@ html {
 
 body {
     margin: 0;
+    font-family: 'Courier New', monospace;
 }
 
 button {
@@ -52,3 +50,5 @@ button {
     color:blue;
     text-decoration:underline;
 }
+
+
