--- a/app/globals.css
+++ b/app/globals.css
@@ -24,7 +24,7 @@ main {
     height: 100vh;
     width: 100vw;
     margin: 0;
-    font-family: 'Courier New', monospace;
+    font-family: monaco,Consolas,Lucida Console,monospace; 
 }
 
 body {
