--- a/app/globals.css
+++ b/app/globals.css
@@ -16,6 +16,13 @@ h2 {
 h3 {
     font-size: 150%;
     margin: 0;
+    padding: 5px;
+}
+
+h4 {
+    font-size: 125%;
+    margin: 0;
+    padding: 2px;
 }
 
 main {
