--- a/app/globals.css
+++ b/app/globals.css
@@ -29,6 +29,7 @@ h4 {
 p {
     width: 500px;
     padding: 15px;
+    text-align: left;
 }
 
 main {
@@ -75,4 +76,11 @@ button {
 
 .parent {
     justify-content: center;
+    position: relative;
+}
+
+.child {
+    width: 50px;
+    height: 50px;
+    position: absolute;
 }
