center artist buttons. refactor some css so centeredness of paragraphs is in a class

--- a/app/globals.css
+++ b/app/globals.css
@@ -78,3 +78,11 @@ button {
     justify-content: center;
     display: flex;
 }
+
+.left-text {
+    text-align: left;
+}
+
+.center-text {
+    text-align: center;
+}
