add img css size limit to 100% of parent size

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,12 @@ test {
     font-size: 200%;
 }
 
+img {
+  max-inline-size: 100%;
+  block-size: auto;
+}
+
+
 h1 {
     font-size: 600%;
     margin: 0;
