add img-holder class with max-width 50vw

--- a/app/globals.css
+++ b/app/globals.css
@@ -78,6 +78,10 @@ button {
     text-decoration:underline;
 }
 
+.img-holder {
+    max-width: 50vw;
+}
+
 .parent {
     justify-content: center;
     display: flex;
