remove margin 0 from body and html, leve on main.

--- a/app/globals.css
+++ b/app/globals.css
@@ -47,14 +47,14 @@ main {
 }
 
 body {
-    margin: 0;
+/*    margin: 0;*/
 }
 
 html {
     background-color: #F0EAD6;
     border: none;
     padding: 0px;
-    margin: 0;
+/*    margin: 0;*/
 }
 
 ul {
