--- a/app/globals.css
+++ b/app/globals.css
@@ -10,25 +10,21 @@ img {
 
 h1 {
     font-size: 600%;
-    margin: 0;
     padding: 20px;
 }
 
 h2 {
     font-size: 250%;
     padding: 20px;
-    margin: 0;
 }
 
 h3 {
     font-size: 150%;
-    margin: 0;
     padding: 5px;
 }
 
 h4 {
     font-size: 125%;
-    margin: 0;
     padding: 2px;
 }
 
@@ -42,7 +38,7 @@ main {
     background-color: #F0EAD6;
     height: 100vh;
     width: 100vw;
-    margin: 0;
+    margin: 0px;
     font-family: "Lucida Console", Monaco, monospace;
 }
 
@@ -64,14 +60,14 @@ ul {
 }
 
 body {
-    margin: 0;
+    margin: 0px;
 }
 
 iframe {
-    width: 640;
-    height: 420;
-    border: 0;
-    margin: 0;
+    width: 640px;
+    height: 420px;
+    border: 0px;
+    margin: 0px;
 }
 button {
     padding: 10px;
