--- a/app/globals.css
+++ b/app/globals.css
@@ -10,27 +10,27 @@ img {
 
 h1 {
     font-size: 600%;
-    margin-bottom: 10px;
+/*    margin-bottom: 10px;*/
 }
 
 h2 {
     font-size: 250%;
-    padding: 20px;
+/*    padding: 20px;*/
 }
 
 h3 {
     font-size: 150%;
-    padding: 5px;
+/*    padding: 5px;*/
 }
 
 h4 {
     font-size: 125%;
-    padding: 2px;
+/*    padding: 2px;*/
 }
 
 p {
     max-width: 800px;
-    padding: 15px;
+/*    padding: 15px;*/
 }
 
 main {
@@ -70,7 +70,7 @@ iframe {
     margin: 0px;
 }
 button {
-    padding: 10px;
+/*    padding: 10px;*/
     border: none;
     background-color: transparent;
 }
