remove css for <pre> element and change left-text class to center-text class for poem

--- a/app/globals.css
+++ b/app/globals.css
@@ -33,10 +33,10 @@ p {
 /*    padding: 15px;*/
 }
 
-pre {
+/*pre {
     max-width: 800px;
-/*    padding: 15px;*/
-}
+/*    padding: 15px;
+}*/
 
 main {
     text-align: center;
